{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 22,
  "lineage": "de135252-dd2b-3ee6-e51b-f2a7368c4d9b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e36b7901e884a10",
            "arn": "arn:aws:ec2:us-east-2:514850833721:instance/i-0160508a8f7e4bca8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0160508a8f7e4bca8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d3fdfd124bca1b77",
            "private_dns": "ip-172-31-22-97.us-east-2.compute.internal",
            "private_ip": "172.31.22.97",
            "public_dns": "ec2-3-136-87-185.us-east-2.compute.amazonaws.com",
            "public_ip": "3.136.87.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00da491484fe029ec",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ourgroup1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-89fac9f3",
            "tags": {
              "Name": "security"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07ec180db2dd3bf3f"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:514850833721:security-group/sg-07ec180db2dd3bf3f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07ec180db2dd3bf3f",
            "ingress": [],
            "name": "ourgroup1",
            "name_prefix": null,
            "owner_id": "514850833721",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ourgroup1"
            },
            "timeouts": null,
            "vpc_id": "vpc-88b36ee3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "certificate",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3200101046",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07ec180db2dd3bf3f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ranges",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 998,
            "id": "sgrule-1061678593",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07ec180db2dd3bf3f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 999,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "single",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-3566711945",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07ec180db2dd3bf3f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.group"
          ]
        }
      ]
    }
  ]
}